@@ -214,7 +214,7 @@ public class Configuration extends Hashtable
          */
         public String readProperty() throws IOException
         {
-            StringBuffer buffer = new StringBuffer();
+            StringBuilder buffer = new StringBuilder();
 
             try
             {
@@ -284,7 +284,7 @@ public class Configuration extends Hashtable
          */
         public String nextToken()
         {
-            StringBuffer buffer = new StringBuffer();
+            StringBuilder buffer = new StringBuilder();
 
             while (hasMoreTokens())
             {
@@ -418,7 +418,7 @@ public class Configuration extends Hashtable
                      * Configure produces lines like this ... just
                      * ignore them.
                      */
-                    if ("".equals(value))
+                    if (value != null && value.isEmpty())
                         continue;
 
                     if (getInclude() != null && 
@@ -711,12 +711,12 @@ public class Configuration extends Hashtable
             while(theKeys.hasMoreElements())
             {
                 String key = (String) theKeys.nextElement();
-                Object value = get((Object) key);
+                Object value = get(key);
                 if(value != null)
                 {
                     if(value instanceof String)
                     {
-                        StringBuffer currentOutput = new StringBuffer();
+                        StringBuilder currentOutput = new StringBuilder();
                         currentOutput.append(key);
                         currentOutput.append("=");
                         currentOutput.append((String) value);
@@ -730,7 +730,7 @@ public class Configuration extends Hashtable
                         {
                             String currentElement = 
                                    (String) valuesEnum.nextElement();
-                            StringBuffer currentOutput = new StringBuffer();
+                            StringBuilder currentOutput = new StringBuilder();
                             currentOutput.append(key);
                             currentOutput.append("=");
                             currentOutput.append(currentElement);
@@ -781,7 +781,7 @@ public class Configuration extends Hashtable
 
             for(int i = 0; i < keysAsListed.size(); i++)
             {
-                if ( ( (String) keysAsListed.get(i)).equals( key ) )
+                if ( keysAsListed.get(i).equals( key ) )
                 {
                     keysAsListed.remove(i);
                     break;
@@ -999,21 +999,16 @@ public class Configuration extends Hashtable
          * Each token is of the form 'key=value'.
          */
         Properties props = new Properties(defaults);
-        for (int i = 0; i < tokens.length; i++)
-        {
-            String token = tokens[i];
+        for (String token : tokens) {
             int equalSign = token.indexOf('=');
-            if (equalSign > 0)
-            {
+            if (equalSign > 0) {
                 String pkey = token.substring(0, equalSign).trim();
                 String pvalue = token.substring(equalSign + 1).trim();
                 props.put(pkey, pvalue);
-            }
-            else
-            {
+            } else {
                 throw new IllegalArgumentException('\'' + token +
-                                                   "' does not contain " +
-                                                   "an equals sign");
+                        "' does not contain " +
+                        "an equals sign");
             }
         }
         return props;
@@ -1105,7 +1100,7 @@ public class Configuration extends Hashtable
         else if (value instanceof String)
         {
             Vector v = new Vector(1);
-            v.addElement((String) value);
+            v.addElement(value);
             put(key, v);
             return v;
         }
@@ -1140,10 +1135,10 @@ public class Configuration extends Hashtable
      */
     public boolean getBoolean(String key)
     {
-        Boolean b = getBoolean(key, (Boolean) null);
+        Boolean b = getBoolean(key, null);
         if (b != null)
         {
-            return b.booleanValue();
+            return b;
         }
         else
         {
@@ -1163,7 +1158,7 @@ public class Configuration extends Hashtable
      */
     public boolean getBoolean(String key, boolean defaultValue)
     {
-        return getBoolean(key, new Boolean(defaultValue)).booleanValue();
+        return getBoolean(key, Boolean.valueOf(defaultValue));
     }
 
     /**
@@ -1188,7 +1183,7 @@ public class Configuration extends Hashtable
         else if (value instanceof String)
         {
             String s = testBoolean((String)value);
-            Boolean b = new Boolean(s);
+            Boolean b = Boolean.valueOf(s);
             put(key, b);
             return b;
         }
@@ -1224,19 +1219,18 @@ public class Configuration extends Hashtable
      */
     public String testBoolean(String value)
     {
-        String s = ((String)value).toLowerCase();
-    
-        if (s.equals("true") || s.equals("on") || s.equals("yes"))
-        {
-            return "true";
-        }
-        else if (s.equals("false") || s.equals("off") || s.equals("no"))
-        {
-            return "false";
-        }
-        else
-        {
-            return null;
+        String s = value.toLowerCase();
+        switch (s) {
+            case "true":
+            case "on":
+            case "yes":
+                return "true";
+            case "false":
+            case "off":
+            case "no":
+                return "false";
+            default:
+                return null;
         }
     }
 
@@ -1257,7 +1251,7 @@ public class Configuration extends Hashtable
         Byte b = getByte(key, null);
         if (b != null)
         {
-            return b.byteValue();
+            return b;
         }
         else
         {
@@ -1280,7 +1274,7 @@ public class Configuration extends Hashtable
     public byte getByte(String key,
                         byte defaultValue)
     {
-        return getByte(key, new Byte(defaultValue)).byteValue();
+        return getByte(key, new Byte(defaultValue));
     }
 
     /**
@@ -1345,7 +1339,7 @@ public class Configuration extends Hashtable
         Short s = getShort(key, null);
         if (s != null)
         {
-            return s.shortValue();
+            return s;
         }
         else
         {
@@ -1368,7 +1362,7 @@ public class Configuration extends Hashtable
     public short getShort(String key,
                           short defaultValue)
     {
-        return getShort(key, new Short(defaultValue)).shortValue();
+        return getShort(key, new Short(defaultValue));
     }
 
     /**
@@ -1459,7 +1453,7 @@ public class Configuration extends Hashtable
         Integer i = getInteger(key, null);
         if (i != null)
         {
-            return i.intValue();
+            return i;
         }
         else
         {
@@ -1489,7 +1483,7 @@ public class Configuration extends Hashtable
             return defaultValue;
         }
         
-        return i.intValue();
+        return i;
       }
 
 
@@ -1555,7 +1549,7 @@ public class Configuration extends Hashtable
         Long l = getLong(key, null);
         if (l != null)
         {
-            return l.longValue();
+            return l;
         }
         else
         {
@@ -1578,7 +1572,7 @@ public class Configuration extends Hashtable
     public long getLong(String key,
                         long defaultValue)
     {
-        return getLong(key, new Long(defaultValue)).longValue();
+        return getLong(key, new Long(defaultValue));
     }
 
     /**
@@ -1643,7 +1637,7 @@ public class Configuration extends Hashtable
         Float f = getFloat(key, null);
         if (f != null)
         {
-            return f.floatValue();
+            return f;
         }
         else
         {
@@ -1666,7 +1660,7 @@ public class Configuration extends Hashtable
     public float getFloat(String key,
                           float defaultValue)
     {
-        return getFloat(key, new Float(defaultValue)).floatValue();
+        return getFloat(key, new Float(defaultValue));
     }
 
     /**
@@ -1731,7 +1725,7 @@ public class Configuration extends Hashtable
         Double d = getDouble(key, null);
         if (d != null)
         {
-            return d.doubleValue();
+            return d;
         }
         else
         {
@@ -1754,7 +1748,7 @@ public class Configuration extends Hashtable
     public double getDouble(String key,
                             double defaultValue)
     {
-        return getDouble(key, new Double(defaultValue)).doubleValue();
+        return getDouble(key, new Double(defaultValue));
     }
 
     /**
